finished english translations.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,5 +29,34 @@
     "username": "Username",
     "error": "Something went wrong. Please try again.",
     "already": "Already have an account?",
-    "loginHere": "Log in here!"
+    "loginHere": "Log in here!",
+
+    "hello": "Hello",
+    "joinEvent": "Join an event",
+    "joinEventButton": "Join event",
+    "myEvents": "My events",
+
+    "eventPassword": "Event password",
+    "eventPassPlaceholder": "Enter the event password",
+
+    "createEventTitle": "Create a new event",
+    "eventName": "Event name",
+    "eventNamePlaceholder": "Enter the event name",
+    "date": "Date",
+    "showHidePass": "Show/Hide password",
+    "multiple": "Multiple people getting gifts?",
+    "yes": "Yes",
+    "no": "No",
+
+    "itemName": "Name",
+    "price": "Price(€)",
+    "details": "Details",
+    "link": "Link",
+    "user": "User",
+    "bought": "Bought",
+    "delete": "Delete",
+    "addItem": "Add item",
+    "leaveEvent": "Leave event",
+    "deleteEvent": "Delete event"
+
 }
