--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,15 +13,15 @@
     "signout": "Sign out",
 
     "welcome": "Welcome back!",
-    "email": "Email",
-    "emailPlaceholder": "Enter your Email address",
-    "emailRequired": "The email is required",
-    "emailFormat": "The email format is not correct",
+    "email": "E-mail",
+    "emailPlaceholder": "Enter your E-mail address",
+    "emailRequired": "The E-mail is required",
+    "emailFormat": "The E-mail format is not correct",
     "password": "Password",
     "confirmPassword": "Confirm password",
     "passwordPlaceholder": "Enter your password",
     "passwordRequired": "The password is required",
-    "loginError": "The email or password is wrong",
+    "loginError": "The E-mail or password is wrong",
     "dontHave": "Don't have an account?",
     "registerHere": "Register here!",
 
