--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,7 @@
     "eventName": "Event name",
     "eventNamePlaceholder": "Enter the event name",
     "date": "Date",
-    "showHidePass": "Show/Hide password",
+    "showHidePass": "Show/Hide",
     "multiple": "Multiple people getting gifts?",
     "yes": "Yes",
     "no": "No",
