--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -43,7 +43,7 @@
     "eventName": "Ime dogodka",
     "eventNamePlaceholder": "Vnesi ime dogodka",
     "date": "Datum",
-    "showHidePass": "Pokaži/skrij geslo",
+    "showHidePass": "Pokaži/Skrij",
     "multiple": "Več ljudi bo prejelo darilo?",
     "yes": "Ja",
     "no": "Ne",
