Visual changes, translation.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -57,6 +57,8 @@
     "delete": "Delete",
     "addItem": "Add item",
     "leaveEvent": "Leave event",
-    "deleteEvent": "Delete event"
+    "deleteEvent": "Delete event",
+
+    "createdby": "Created by: "
 
 }
