--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -57,6 +57,8 @@
     "delete": "Izbriši",
     "addItem": "Dodaj izdelek",
     "leaveEvent": "Zapusti dogodek",
-    "deleteEvent": "Izbriši dogodek"
+    "deleteEvent": "Izbriši dogodek",
+
+    "createdby": "Ustvarjeno od: "
 
 }
