--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,7 +44,8 @@
     "eventName": "Event name",
     "eventNamePlaceholder": "Enter the event name",
     "date": "Date",
-    "showHidePass": "Show/Hide",
+    "show": "Show",
+    "hide": "Hide",
     "multiple": "Multiple people getting gifts?",
     "yes": "Yes",
     "no": "No",
@@ -58,6 +59,9 @@
     "delete": "Delete",
     "addItem": "Add item",
     "leaveEvent": "Leave event",
+    "editEvent": "Edit event",
+    "editItem": "Edit item",
+    "edit": "Edit",
     "deleteEvent": "Delete event",
 
     "createdby": "Created by: "
