--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -1,51 +1,52 @@
 {
     "oops": "Opa!",
-    "notFound": "Nismo dobili strani, ki si jo iskal.",
+    "notFound": "Nismo dobili strani, ki ste jo iskali.",
     "home": "Pojdi na domačo stran",
 
-    "landing": "Vpiši se v svoj profil ali ustvari novega",
+    "landing": "Vpišite se v svoj profil ali ustvarite novega",
     "login": "Vpis",
     "register": "Registracija",
 
-    "dashboard": "Nadzorna plošča",
+    "dashboard": "Domača stran",
     "events": "Dogodki",
-    "createEvent": "Ustvari dogodek",
+    "createEvent": "Ustvarite dogodek",
     "signout": "Odjava",
 
     "welcome": "Dobrodošli nazaj!",
     "email": "E-mail",
-    "emailPlaceholder": "Vnesi svoj E-mail naslov",
+    "emailPlaceholder": "Vnesite svoj E-mail naslov",
     "emailRequired": "Vnos E-mail-a je obvezen",
     "emailFormat": "Format E-mail-a je napačen",
     "password": "Geslo",
-    "confirmPassword": "Potrdi geslo",
-    "passwordPlaceholder": "Vnesi geslo",
+    "confirmPassword": "Potrditev gesla",
+    "passwordPlaceholder": "Vnesite geslo",
     "passwordRequired": "Vnos gesla je obvezen",
     "loginError": "Napačen E-mail ali geslo",
     "dontHave": "Še nimate računa?",
     "registerHere": "Registrirajte se tukaj!",
 
-    "newAccount": "Ustvari nov račun",
+    "newAccount": "Ustvarite nov račun",
     "username": "Uporabniško ime",
-    "error": "Nekaj je šlo narobe. Poskusi ponovno.",
-    "already": "Že imaš račun?",
+    "error": "Nekaj je šlo narobe. Poskusite ponovno.",
+    "already": "Že imate račun?",
     "passwordMatch":"Geslo se ne ujema.",
-    "loginHere": "Vpiši se tukaj!",
+    "loginHere": "Vpišite se tukaj!",
 
-    "hello": "Pozdravljen",
-    "joinEvent": "Pridruži se dogodku",
-    "joinEventButton": "Pridruži se",
+    "hello": "Pozdravljeni",
+    "joinEvent": "Pridružite se dogodku",
+    "joinEventButton": "Pridružite se",
     "myEvents": "Moji dogodki",
 
     "eventPassword": "Geslo dogodka",
-    "eventPassPlaceholder": "Vnesi geslo dogodka",
+    "eventPassPlaceholder": "Vnesite geslo dogodka",
 
-    "createEventTitle": "Ustvari dogodek",
+    "createEventTitle": "Ustvarite dogodek",
     "eventName": "Ime dogodka",
-    "eventNamePlaceholder": "Vnesi ime dogodka",
+    "eventNamePlaceholder": "Vnesite ime dogodka",
     "date": "Datum",
-    "showHidePass": "Pokaži/Skrij",
-    "multiple": "Več ljudi bo prejelo darilo?",
+    "show": "Pokaži",
+    "hide": "Skrij",
+    "multiple": "Ali bo več ljudi prejelo darilo?",
     "yes": "Ja",
     "no": "Ne",
 
@@ -58,8 +59,11 @@
     "delete": "Izbriši",
     "addItem": "Dodaj izdelek",
     "leaveEvent": "Zapusti dogodek",
+    "editEvent": "Uredi dogodek",
+    "editItem": "Uredi izdelek",
+    "edit": "Uredi",
     "deleteEvent": "Izbriši dogodek",
 
-    "createdby": "Ustvarjeno od: "
+    "createdby": "Ustvaril je: "
 
 }
